# 10.pyclass

./: README.md  csv_class.py  csv_teste.py  pyproject.toml
